--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 blinker==1.6.2
 Django==4.2.3
+django-shortcuts==1.6
+django-widget-tweaks==1.5.0
 kaleido==0.2.1
 mysql-connector-python==8.1.0
 numpy==1.25.2
@@ -13,5 +15,5 @@ pytz==2023.3
 six==1.16.0
 sqlparse==0.4.4
 tenacity==8.2.2
+typing_extensions==4.7.1
 tzdata==2023.3
-
