--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mysql-connector-python==8.1.0
 numpy==1.25.2
 packaging==23.1
 pandas==2.0.3
+Pillow==10.0.0
 plotly==5.16.0
 protobuf==4.21.12
 python-dateutil==2.8.2
