--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pandas==2.0.3
 Pillow==10.0.0
 plotly==5.16.0
 protobuf==4.21.12
+pymongo==3.6.0
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
@@ -18,4 +19,3 @@ sqlparse==0.4.4
 tenacity==8.2.2
 typing_extensions==4.7.1
 tzdata==2023.3
-
