--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.7.2
 blinker==1.6.2
-Django==4.2.3
+Django==4.1.13
 django-shortcuts==1.6
 django-widget-tweaks==1.5.0
+djongo==1.3.6
 dnspython==2.4.2
 kaleido==0.2.1
 mysql-connector-python==8.1.0
@@ -16,7 +17,7 @@ pymongo==4.5.0
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.2.4
 tenacity==8.2.2
 typing_extensions==4.7.1
 tzdata==2023.3
