--- a/crm_employers/requirements.txt
+++ b/crm_employers/requirements.txt
@@ -4,13 +4,16 @@ blinker==1.6.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 dash==2.14.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Django==4.1.13
+django-cors-headers==4.3.1
 django-shortcuts==1.6
 django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
 dnspython==2.4.2
 Flask==3.0.0
 idna==3.6
