--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Django==4.1.13
+django-cors-headers==4.3.1
 django-shortcuts==1.6
 django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
 dnspython==2.4.2
 Flask==3.0.0
 idna==3.6
